revert constructor changes